feat: improves data model

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
               <div class="date-box">
                   <div class="date-day"></div>
                   <div class="date-month-year">
-                      <span>Sep</span>
-                      <span>2021</span>
+                      <span id="monthName"></span>
+                      <span></span>
                   </div>
               </div>
               <div class="date-day-name">Wednesday</div>
