feat: add task component

--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
               </div>
               <div class="date-day-name">Wednesday</div>
           </header>
-          <div class="tasks-list"></div>
+
+          <div class="tasks-list">
+
+          </div>
 
           <button class="add-task-btn"><i class="fas fa-plus"></i></button>
         </div>
